# ssmi

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  README.md
scripts/: bypass_ps1_run.bat  install_ms_association.bat  install_ms_association.ps1  install_ssmi.bat  install_ssmi.ps1  uninstall_ms_association.ps1  uninstall_ssmi.bat
src/: main.cpp
